force-app/main/default/objects/Rostering_Setting__c/Rostering_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Manages Colours in Rostering Page</description>
    <label>Rostering Setting</label>
</CustomObject>