force-app/main/default/objects/Rostering_Setting__c/fields/Closing_Hours_Color__c.field-meta.xml
<CustomField>
    <fullName>Closing_Hours_Color__c</fullName>
    <defaultValue>(&quot;lightcoral&quot;)</defaultValue>
    <label>Closing Hours Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>