force-app/main/default/objects/Rostering_Setting__c/fields/Exam_Day_Color__c.field-meta.xml
<CustomField>
    <fullName>Exam_Day_Color__c</fullName>
    <defaultValue>(&quot;lightcoral&quot;)</defaultValue>
    <label>Exam Day Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>