force-app/main/default/objects/Rostering_Setting__c/fields/Leave_Event_Color__c.field-meta.xml
<CustomField>
    <fullName>Leave_Event_Color__c</fullName>
    <defaultValue>(&quot;lightcoral&quot;)</defaultValue>
    <label>Leave Event Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>