force-app/main/default/objects/Rostering_Setting__c/fields/Opening_Hours_Color__c.field-meta.xml
<CustomField>
    <fullName>Opening_Hours_Color__c</fullName>
    <defaultValue>(&quot;lightcoral&quot;)</defaultValue>
    <label>Opening Hours Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>