force-app/main/default/objects/Rostering_Setting__c/fields/Sick_Leave_Event_Color__c.field-meta.xml
<CustomField>
    <fullName>Sick_Leave_Event_Color__c</fullName>
    <defaultValue>(&quot;cornflowerblue&quot;)</defaultValue>
    <label>Sick Leave Event Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>